[package]
name = "strsim"
version = "0.8.0"
authors = ["Danny Guo <dannyguo91@gmail.com>"]
description = """
Implementations of string similarity metrics.
Includes Hamming, Levenshtein, OSA, Damerau-Levenshtein, Jaro, and Jaro-Winkler.
"""
license = "MIT"
readme = "README.md"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
homepage = "https://github.com/dguo/strsim-rs"
repository = "https://github.com/dguo/strsim-rs"
documentation = "https://docs.rs/strsim/"
exclude = ["/.travis.yml", "/appveyor.yml", "/dev"]
edition="2018"

[dependencies]
hashbrown = "0.1.8"
ndarray = "0.12.1"

[badges]
travis-ci = { repository = "dguo/strsim-rs" }
appveyor = { repository = "dguo/strsim-rs" }
