[package]
name = "strsim"
version = "0.9.3"
authors = ["Danny Guo <dannyguo91@gmail.com>"]
description = """
Implementations of string similarity metrics.
Includes Hamming, Levenshtein, OSA, Damerau-Levenshtein, Jaro, and Jaro-Winkler.
"""
license = "MIT"
readme = "README.md"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
homepage = "https://github.com/dguo/strsim-rs"
repository = "https://github.com/dguo/strsim-rs"
documentation = "https://docs.rs/strsim/"
exclude = ["/.travis.yml", "/dev"]

[badges]
travis-ci = { repository = "dguo/strsim-rs" }
